Fix text alignment on smaller devices :iphone:

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ html * {
 @media (max-width: 640px) {
   .about-text {
     font-size: 18px;
-    text-align: left;
+    text-align: justify;
     text-justify: inter-word;
   }
 }
